--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
@@ -388,6 +388,12 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 	border:none;
 	background-color:transparent;
 }
+.metaMenu .selectContainer .selectboxIcon {
+	float:right;
+	padding:0 0.1818em 0 0;
+	margin:-1.5454em 0 0 0;
+	background-color:transparent;
+}
 
 .selectContainer select {
 	float:left;
@@ -420,9 +426,15 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 	background-color:#FFFFFF;
 	border:0.0909em solid #9fafae;
 }
-
+.selectboxIcon {
+	float:right;
+	padding:0 0.1818em 0 0;
+	margin:-1.3636em 0 0 0;
+	margin-right:0 !important; /*action menu fix*/
+	background-color: #FFFFFF;
+}
 .free_area0.third_txtInput {
-	background-color:#f3f5f5;
+	background-color:#FFFFFF;
 }
 
 /*LISTS & FULL ITEM*/
