--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_highContrast/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_highContrast/styles/appearance.css
@@ -383,7 +383,12 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 	border:none;
 	background-color:#FFFFFF;
 }
-
+.metaMenu .selectContainer .selectboxIcon {
+	float:right;
+	padding:0 0.1818em 0 0;
+	margin:-1.5454em 0 0 0;
+	background-color:transparent;
+}
 
 
 .selectContainer select {
@@ -417,10 +422,13 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 	background-color:#F2F8FC;
 	border:0.0909em solid #A4A4A4;
 }
-
-
-
-
+.selectboxIcon {
+	float:right;
+	padding:0 0.1818em 0 0;
+	margin:-1.3636em 0 0 0;
+	margin-right:0 !important; /*action menu fix*/
+	background-color: #F2F8FC;
+}
 
 
 
