- colorizing - line height for headlines - changed selectboxIcon for dropdowns - link bevaviours modified

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/fullItem.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/fullItem.css
@@ -132,7 +132,7 @@
 .fullItem .itemHeadline {
 	width: 53.82em;
 	padding: 0 0 0.3636em 0;
-	margin-top:0.2727em;
+/*	margin-top:0.2727em; */
 }
 
 .fullItem .listItem .itemHeadline {
