--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_classic/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_classic/styles/appearance.css
@@ -521,6 +521,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 .fullItem .itemHeadline b {
     font-size: 16px !important;
     font-weight: normal;
+	line-height:145%;
 }
 
 .listItem .itemHeadline b {
@@ -688,6 +689,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 .infoMessageArea {
 	border: 1px solid #56871B !important;
     border-color: #56871B;
+	position:absolute;
 }
 
 .infoMessageArea h2 {
