--- a/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
@@ -85,15 +85,17 @@
 			<h:outputText styleClass="medium_area0" value=" " />
 		</h:panelGroup> 
 <%-- Start iteration of authors input --%>
-	<span class="full_area0">
+	<span class="full_area0 marginTExcl6p">
 		<tr:iterator id="iterCreatorOrganisationAuthors" var="creator" value="#{EditItemSessionBean.creators}" rows="0">
 			<h:panelGroup layout="block" styleClass="full_area0 suggestAnchor endline">
 			
 <%-- Creator person family name, Creator person given name --%>
+				<%--
 				<h:panelGroup layout="block" styleClass="free_area0 endline" rendered="#{creator.personType and !(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'easy-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
 					<span class="large_area0 xSmall_marginRExcl">&nbsp;</span>
 					<span class="xTiny_area0">&nbsp;</span>
 				</h:panelGroup>
+				 --%>
 				<h:panelGroup layout="block" styleClass="clear free_area0 endline"
 					rendered="#{creator.personType and !(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
 					<span class="large_area0 xSmall_marginRExcl">&nbsp;</span>
