--- a/pubman/pubman_presentation/src/main/webapp/list/gridList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/list/gridList.jspf
@@ -115,7 +115,7 @@ All rights reserved. Use is subject to license terms.
     <tr class="full_area0">
      		<th class="free_area0_p8 endline itemSelectArea">
  			<input type="checkbox" class="allCheckBox"/>
- 			<input type="button" id="btcheckBoxSelectButton" class="min_imgBtn checkBoxSelectButton"/>
+ 			<span type="button" id="btcheckBoxSelectButton" class="min_imgBtn checkBoxSelectButton"></span>
  			
  			<div class="large_area1 xTiny_marginLIncl selectMenu" style="display: none;">
  				<span class="large_area0_p8" style="text-align:left;"><h:outputText value="#{lbl.List_SelectItem}"/></span>
