--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
@@ -371,7 +371,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 	opacity:0;
 	-moz-opacity:0;
 	cursor:pointer;
-	background-color:transparent;
+	background-color:#EAF4F7;	/* because of FF2 it must be have a color, don't use transparent */
 	color:#147DA2;
 }
 .metaMenu .selectionBox {
