floating problem in FF2 with options in a floated context fixed font-weight normal for selectionBox in selectContainer

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/globalCSS/eSciDoc_core_em.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/globalCSS/eSciDoc_core_em.css
@@ -186,6 +186,10 @@ h6 {
 	font-weight:normal; /* fix for different browser, e.g. on Macintosh */
 }
 
+option {	/* fix for FF2 and floating contents */
+	float:none !important;
+}
+
 /*LINEBREAK AND LAST IN LINE*/
 .clear {
     clear: both;
