--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/fullItem.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/fullItem.css
@@ -238,6 +238,10 @@
 	width: 43.37em;
 }
 
+.itemLine .licenseArea {
+	margin-left:15.8181em;
+}
+
 .fullItem .listItemLine, .fullItem li {
 	padding-top: 0px;
 	padding-bottom: 0px;
