GUI work - fix for breadcrump in submission pages
Former-commit-id: 32d1d28e64f276141e7a063ad65e49306f8d6ac6

--- a/pubman/pubman_presentation/src/main/webapp/header/Breadcrumb.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/Breadcrumb.jspf
@@ -36,7 +36,7 @@
 <div class="clear breadcrumb">
 	<!-- Breadcrumb starts here -->
 	<ol>
-		<tr:iterator id="BreadcrumbNavigation" var="item">
+		<tr:iterator id="BreadcrumbNavigation" var="item" value="#{BreadcrumbItemHistorySessionBean.breadcrumbs}">
 			<li>
 <%-- start has to be reworked anyway --%>
 				<tr:goLink id="lnkDestination" destination="/#{ApplicationBean.appContext}#{item.page}" rendered="#{!item.isLast && item.defaultAction == null}">
@@ -50,9 +50,9 @@
 <%-- stop has to be reworked anyway --%>
 			</li>
 		</tr:iterator>
-		<li>&#160;</li>
+		<li></li>
 	</ol>
 	<!-- Breadcrumb ends here -->
 </div>
-
+<script type="text/javascript" src="../resources/commonJavaScript/componentJavaScript/breadcrump.js"></script>
 </f:subview>
