--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
@@ -786,6 +786,12 @@ body .wrapper {
 .headerSection h1 {
 	font-family: "Myriad Pro Condensed", "Arial Narrow", sans-serif;
 }
+.header.alternateHeader .metaMenu {
+	margin-bottom:5.7272em;
+}
+.header.alternateHeader .metaMenu .logoAlternate a {
+	background-color:transparent;
+}
 
 /***** PRE-HEADER *****/
 .preListHeader {
